# n8n-mcp-server

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Jenkinsfile  LICENSE  N8N_API_WORKFLOW_CREATION_REPORT.md  N8N_SERVER_UPDATE_WORKFLOW.md  README.md  pyproject.toml
.claude-plugin/: plugin.json
.claude/commands/: deploy-plugin.md
.github/workflows/: claude-code-review.yml
.serena/: project.yml
agents/: README.md
commands/: n8n-setup.command.md
config/: mcp.json
docs/: CONNECTION_TYPES.md  CREDENTIAL_TYPES.md  Jenkinsfile-python-template.groovy  KNOWN_LIMITATIONS.md  N8N_MCP_ISSUES.md  SOFTWARE-CM-PLAN.md  WORKFLOW_FIELD_REFERENCE.md
hooks/: hooks.json
skills/n8n-setup/: SKILL.md
src/n8n_mcp/: __init__.py  client.py  models.py  server.py  utils.py  validator.py
tests/: __init__.py  conftest.py  test_server.py  test_validator.py
